--- a/h/ha/har/harrypottertheplay.com.html
+++ b/h/ha/har/harrypottertheplay.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the harrypottertheplay.com privacy policy that was archived on 2016-10-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161007122754id_/http%3A//www.harrypottertheplay.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the harrypottertheplay.com privacy policy that was archived on 2017-04-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170411133656id_/https%3A//www.harrypottertheplay.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-GB" prefix="og: http://ogp.me/ns#" class=""><!--<![endif]--><head>
 	<meta charset="utf-8">
@@ -30,7 +30,7 @@
 
 
 	
-<!-- This site is optimized with the Yoast SEO plugin v3.5 - https://yoast.com/wordpress/plugins/seo/ -->
+<!-- This site is optimized with the Yoast SEO plugin v3.8 - https://yoast.com/wordpress/plugins/seo/ -->
 <meta name="robots" content="noindex,follow">
 <link rel="canonical" href="https://www.harrypottertheplay.com/privacy-policy/">
 <meta property="og:locale" content="en_GB">
@@ -39,16 +39,20 @@
 <meta property="og:description" content="1 PRIVACY AND YOUR PERSONAL DATA 1.1 AKA Promotions&nbsp;Limited (“AKA”, “us”, “we” or “our” for short) is committed to protecting the privacy of our users. This Privacy Policy (“Policy”) is intended to inform you how we gather, define, and utilise your Information (as defined below). This Policy is intended to assist you in making informed...  &nbsp;Read more">
 <meta property="og:url" content="https://www.harrypottertheplay.com/privacy-policy/">
 <meta property="og:site_name" content="Harry Potter And The Cursed Child">
-<meta property="og:image" content="http://www.harrypottertheplay.com/content/uploads/2015/10/fb-og.jpg">
+<meta property="og:image" content="https://www.harrypottertheplay.com/content/uploads/2016/11/facebook-image.jpg">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:description" content="1 PRIVACY AND YOUR PERSONAL DATA 1.1 AKA Promotions&nbsp;Limited (“AKA”, “us”, “we” or “our” for short) is committed to protecting the privacy of our users. This Privacy Policy (“Policy”) is intended to inform you how we gather, define, and utilise your Information (as defined below). This Policy is intended to assist you in making informed...  &nbsp;Read more ">
 <meta name="twitter:title" content="Privacy Policy | Harry Potter And The Cursed Child">
-<meta name="twitter:image" content="http://www.harrypottertheplay.com/content/uploads/2015/10/fb-og.jpg">
+<meta name="twitter:image" content="https://www.harrypottertheplay.com/content/uploads/2016/11/facebook-image.jpg">
 <!-- / Yoast SEO plugin. -->
 
+<link rel="dns-prefetch" href="//platform.twitter.com">
+<link rel="dns-prefetch" href="//maps.googleapis.com">
+<link rel="dns-prefetch" href="//code.jquery.com">
+<link rel="dns-prefetch" href="//s.w.org">
 		<script type="text/javascript">
-			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/72x72\/","ext":".png","source":{"concatemoji":"https:\/\/www.harrypottertheplay.com\/wp\/wp-includes\/js\/wp-emoji-release.min.js"}};
-			!function(a,b,c){function d(a){var c,d,e,f=b.createElement("canvas"),g=f.getContext&&f.getContext("2d"),h=String.fromCharCode;if(!g||!g.fillText)return!1;switch(g.textBaseline="top",g.font="600 32px Arial",a){case"flag":return g.fillText(h(55356,56806,55356,56826),0,0),f.toDataURL().length>3e3;case"diversity":return g.fillText(h(55356,57221),0,0),c=g.getImageData(16,16,1,1).data,d=c[0]+","+c[1]+","+c[2]+","+c[3],g.fillText(h(55356,57221,55356,57343),0,0),c=g.getImageData(16,16,1,1).data,e=c[0]+","+c[1]+","+c[2]+","+c[3],d!==e;case"simple":return g.fillText(h(55357,56835),0,0),0!==g.getImageData(16,16,1,1).data[0];case"unicode8":return g.fillText(h(55356,57135),0,0),0!==g.getImageData(16,16,1,1).data[0]}return!1}function e(a){var c=b.createElement("script");c.src=a,c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g,h,i;for(i=Array("simple","flag","unicode8","diversity"),c.supports={everything:!0,everythingExceptFlag:!0},h=0;h<i.length;h++)c.supports[i[h]]=d(i[h]),c.supports.everything=c.supports.everything&&c.supports[i[h]],"flag"!==i[h]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[i[h]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
+			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/www.harrypottertheplay.com\/wp\/wp-includes\/js\/wp-emoji-release.min.js"}};
+			!function(a,b,c){function d(a){var c,d,e,f,g,h=b.createElement("canvas"),i=h.getContext&&h.getContext("2d"),j=String.fromCharCode;if(!i||!i.fillText)return!1;switch(i.textBaseline="top",i.font="600 32px Arial",a){case"flag":return i.fillText(j(55356,56806,55356,56826),0,0),!(h.toDataURL().length<3e3)&&(i.clearRect(0,0,h.width,h.height),i.fillText(j(55356,57331,65039,8205,55356,57096),0,0),c=h.toDataURL(),i.clearRect(0,0,h.width,h.height),i.fillText(j(55356,57331,55356,57096),0,0),d=h.toDataURL(),c!==d);case"diversity":return i.fillText(j(55356,57221),0,0),e=i.getImageData(16,16,1,1).data,f=e[0]+","+e[1]+","+e[2]+","+e[3],i.fillText(j(55356,57221,55356,57343),0,0),e=i.getImageData(16,16,1,1).data,g=e[0]+","+e[1]+","+e[2]+","+e[3],f!==g;case"simple":return i.fillText(j(55357,56835),0,0),0!==i.getImageData(16,16,1,1).data[0];case"unicode8":return i.fillText(j(55356,57135),0,0),0!==i.getImageData(16,16,1,1).data[0];case"unicode9":return i.fillText(j(55358,56631),0,0),0!==i.getImageData(16,16,1,1).data[0]}return!1}function e(a){var c=b.createElement("script");c.src=a,c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g,h,i;for(i=Array("simple","flag","unicode8","diversity","unicode9"),c.supports={everything:!0,everythingExceptFlag:!0},h=0;h<i.length;h++)c.supports[i[h]]=d(i[h]),c.supports.everything=c.supports.everything&&c.supports[i[h]],"flag"!==i[h]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[i[h]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
 		</script><script src="https://www.harrypottertheplay.com/wp/wp-includes/js/wp-emoji-release.min.js" type="text/javascript"></script>
 		<style type="text/css">
 img.wp-smiley,
@@ -64,13 +68,12 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
-<link rel="stylesheet" id="AKA-stylesheet-css" href="https://www.harrypottertheplay.com/content/themes/full-site/build/css/min/style.min.css?44d224af1f7379f939b6c9ef389e78e6" type="text/css" media="all">
+<link rel="stylesheet" id="AKA-stylesheet-css" href="https://www.harrypottertheplay.com/content/themes/full-site/build/css/min/style.min.css?bce2f26c10fb332044512317b9599d5f" type="text/css" media="all">
 <!--[if lt IE 9]>
 <link rel='stylesheet' id='AKA-ie-only-css'  href='https://www.harrypottertheplay.com/content/themes/full-site/build/css/min/ie.min.css' type='text/css' media='all' />
 <![endif]-->
 <link rel="https://api.w.org/" href="https://www.harrypottertheplay.com/wp-json/">
 <link rel="alternate" type="application/json+oembed" href="https://www.harrypottertheplay.com/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fwww.harrypottertheplay.com%2Fprivacy-policy%2F">
-<link rel="alternate" type="text/xml+oembed" href="https://www.harrypottertheplay.com/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fwww.harrypottertheplay.com%2Fprivacy-policy%2F&amp;format=xml">
 	<!--[if lt IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script><![endif]-->
 	<script>
 		var frontPage;
@@ -143,6 +146,7 @@ img.emoji {
 	<li id="menu-item-1264" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1264"><span><a title="Venue Information" href="https://www.harrypottertheplay.com/your-visit/">Venue Information </a></span></li>
 	<li id="menu-item-1265" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1265"><span><a title="Where to eat" href="https://www.harrypottertheplay.com/restaurants/">Where to eat </a></span></li>
 	<li id="menu-item-1266" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1266"><span><a title="Things to do" href="https://www.harrypottertheplay.com/local-areas-interest/">Things to do </a></span></li>
+	<li id="menu-item-2000" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2000"><span><a title="Ticket and Hotel Packages" href="http://www.harrypottertheplay.com/ticket-hotel-packages/">Ticket and Hotel Packages </a></span></li>
 </ul>
 </li>
 <li id="menu-item-97" class="small-block menu-item menu-item-type-post_type menu-item-object-page menu-item-97"><span><a title="Your Questions<br>Answered" href="https://www.harrypottertheplay.com/questions/">Your Questions<br>Answered </a></span></li>
@@ -312,7 +316,7 @@ img.emoji {
 					<div class="container">
 						<p>Harry Potter Publishing and Theatrical Rights © J.K. Rowling<br>
 Harry Potter characters, names and related indicia are trademarks of and © Warner Bros. Ent. All rights reserved.<br>
-By using this site, you agree to our <a href="http://www.harrypottertheplay.com/cookies-policy/">Cookies Policy</a> | <a href="http://www.harrypottertheplay.com/terms-and-conditions/">Terms and Conditions</a> | <a href="http://www.harrypottertheplay.com/privacy-policy/">Privacy Policy</a></p>
+By using this site, you agree to our <a href="https://www.harrypottertheplay.com/cookies-policy/">Cookies Policy</a> | <a href="https://www.harrypottertheplay.com/terms-and-conditions/">Terms and Conditions</a> | <a href="https://www.harrypottertheplay.com/privacy-policy/">Privacy Policy</a></p>
 <p>Website designed, built and managed by <a href="http://www.akauk.com" target="_blank">AKA</a></p>
 					</div>
 				</div>
@@ -346,6 +350,7 @@ By using this site, you agree to our <a href="http://www.harrypottertheplay.com/
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1264"><span><a title="Venue Information" href="https://www.harrypottertheplay.com/your-visit/">Venue Information </a></span></li>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1265"><span><a title="Where to eat" href="https://www.harrypottertheplay.com/restaurants/">Where to eat </a></span></li>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1266"><span><a title="Things to do" href="https://www.harrypottertheplay.com/local-areas-interest/">Things to do </a></span></li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2000"><span><a title="Ticket and Hotel Packages" href="http://www.harrypottertheplay.com/ticket-hotel-packages/">Ticket and Hotel Packages </a></span></li>
 </ul>
 </li>
 <li class="small-block menu-item menu-item-type-post_type menu-item-object-page menu-item-97"><span><a title="Your Questions<br>Answered" href="https://www.harrypottertheplay.com/questions/">Your Questions<br>Answered </a></span></li>
@@ -357,7 +362,7 @@ By using this site, you agree to our <a href="http://www.harrypottertheplay.com/
 <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="https://www.harrypottertheplay.com/content/themes/full-site/build/js/min/scripts.js?8892d0820357630b5b752ac7fbf745f9"></script>
+<script type="text/javascript" src="https://www.harrypottertheplay.com/content/themes/full-site/build/js/min/scripts.js?abc39be9387d5e5b71ba4b542b3d85ab"></script>
 <script type="text/javascript" src="https://www.harrypottertheplay.com/wp/wp-includes/js/wp-embed.min.js"></script>
 
 <!-- AKA Share Remodal -->
