--- a/i/in/ins/instantposition.com.html
+++ b/i/in/ins/instantposition.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the instantposition.com privacy policy that was archived on 2016-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161222053638id_/http%3A//www.instantposition.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the instantposition.com privacy policy that was archived on 2017-04-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170411135147id_/http%3A//instantposition.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta content="text/html;charset=utf-8" http-equiv="content-type">
