--- a/l/la/las/laserpointerforums.com.html
+++ b/l/la/las/laserpointerforums.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the laserpointerforums.com privacy policy that was archived on 2016-03-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160310184526id_/http%3A//laserpointerforums.com/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the laserpointerforums.com privacy policy that was archived on 2017-04-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170414225227id_/http%3A//laserpointerforums.com/privacy_policy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - www.laserpointerforums.com</title>
@@ -11,7 +11,7 @@
 <p> At www.laserpointerforums.com, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by www.laserpointerforums.com and how it is used. </p> 
 <p> <b>Log Files</b><br> Like many other Web sites, www.laserpointerforums.com makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user.s movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. </p> 
 <p> <b>Cookies and Web Beacons</b><br> www.laserpointerforums.com does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser. </p> 
-<p> Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include ....... <br> ParkingCrew, advertising.com, madadsmedia
+<p> Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include ....... <br> Google, media.net
 <br> <br> <br> <br>  </p> 
 <p> These third-party ad servers or ad networks use technology to the advertisements and links that appear on www.laserpointerforums.com send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see. </p> 
 <p> www.laserpointerforums.com has no access to or control over these cookies that are used by third-party advertisers. </p> 
