--- a/j/jo/joh/johncornetta.com.html
+++ b/j/jo/joh/johncornetta.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the johncornetta.com privacy policy that was archived on 2016-10-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161027152000id_/http%3A//johncornetta.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the johncornetta.com privacy policy that was archived on 2017-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170415035035id_/http%3A//www.johncornetta.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
