--- a/g/gl/glo/globalwitness.org.html
+++ b/g/gl/glo/globalwitness.org.html
@@ -1,24 +1,24 @@
-<!--The following is the downloaded HTML source of the globalwitness.org privacy policy that was archived on 2016-10-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161015031455id_/https%3A//www.globalwitness.org/en/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globalwitness.org privacy policy that was archived on 2017-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170415043035id_/https%3A//www.globalwitness.org/en/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang=""><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Privacy Policy | Global Witness</title>
-<meta name="description" content="">
+<meta name="description" content="Global Witness website privacy policy.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@global_witness">
 <meta name="twitter:creator" content="@global_witness">
 <meta name="twitter:title" content="Privacy Policy | Global Witness">
-<meta name="twitter:description" content="Privacy Policy">
+<meta name="twitter:description" content="Global Witness website privacy policy.">
 <meta name="twitter:image:src" content="https://www.globalwitness.org/static/img/default-sharing-image.jpg">
 <meta property="fb:app_id" content="1573433759567938">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.globalwitness.org/en/privacy-policy/">
 <meta property="og:title" content="Privacy Policy | Global Witness">
 <meta property="og:image" content="https://www.globalwitness.org/static/img/default-sharing-image.jpg">
-<meta property="og:description" content="Privacy Policy">
+<meta property="og:description" content="Global Witness website privacy policy.">
 <meta property="og:site_name" content="Global Witness">
 <link rel="apple-touch-icon" sizes="57x57" href="/static/img/favicons/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/static/img/favicons/apple-touch-icon-60x60.png">
@@ -39,8 +39,8 @@
 <meta name="msapplication-TileImage" content="/static/img/favicons/mstile-144x144.png">
 <meta name="msapplication-config" content="/static/img/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="/static/CACHE/css/d05cf3c6e4f8.css" type="text/css">
-<link rel="stylesheet" href="/static/CACHE/css/0782df23ae65.css" type="text/css">
+<link rel="stylesheet" href="/static/CACHE/css/74b31fd60530.css" type="text/css">
+<link rel="stylesheet" href="/static/CACHE/css/297e6e272a17.css" type="text/css">
 <script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5M9K5J"></script><script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js" type="text/javascript" async=""></script><script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/2.3.0/picturefill.min.js" async=""></script>
 <script>
             WebFontConfig = {
@@ -60,7 +60,7 @@
             s.parentNode.insertBefore(wf, s);
             })();
         </script>
-<style type="text/css">@media screen and (min-width:1024px) {.harvey-test{}}</style><style>.campaigns-menu-open .page-wrapper{ transform: translateY(666px); transform: translate3d( 0px, 666px, 0px);}.campaigns-menu-open #menu-container { height:666px;}</style><style>.search-open .page-wrapper{ transform: translateY(81px); transform: translate3d( 0px, 81px, 0px);}.search-open #menu-container { height:81px;}</style><style>.countries-menu-open .page-wrapper{ transform: translateY(355px); transform: translate3d( 0px, 355px, 0px);}.countries-menu-open #menu-container { height:355px;}</style><style>.languages-menu-open .page-wrapper{ transform: translateY(184px); transform: translate3d( 0px, 184px, 0px);}.languages-menu-open #menu-container { height:184px;}</style></head>
+<style type="text/css">@media screen and (min-width:1024px) {.harvey-test{}}</style><style>.campaigns-menu-open .page-wrapper{ transform: translateY(855px); transform: translate3d( 0px, 855px, 0px);}.campaigns-menu-open #menu-container { height:855px;}</style><style>.search-open .page-wrapper{ transform: translateY(80px); transform: translate3d( 0px, 80px, 0px);}.search-open #menu-container { height:80px;}</style><style>.countries-menu-open .page-wrapper{ transform: translateY(355px); transform: translate3d( 0px, 355px, 0px);}.countries-menu-open #menu-container { height:355px;}</style><style>.languages-menu-open .page-wrapper{ transform: translateY(184px); transform: translate3d( 0px, 184px, 0px);}.languages-menu-open #menu-container { height:184px;}</style></head>
 <body id="top" class="template-standard-page layout-story no-hero-image">
  
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-5M9K5J" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -119,13 +119,16 @@
 </a>
 <ul>
 <li>
-<a href="/en/campaigns/conflict-minerals/dodd-frank-act/"><h4>The Dodd Frank Act&nbsp;<i class="fa fa-angle-right"></i></h4></a>
-</li>
-<li>
 <a href="/en/campaigns/conflict-minerals/conflict-minerals-europe-brief/"><h4>Conflict Minerals in Europe&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 <li>
 <a href="/en/campaigns/conflict-minerals/digging-transparency/"><h4>Digging for Transparency&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+</li>
+<li>
+<a href="/en/campaigns/conflict-minerals/out-of-africa/"><h4>Out of Africa&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+</li>
+<li>
+<a href="/en/campaigns/conflict-minerals/river-of-gold-drc/"><h4>River of Gold&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 </ul>
 </li>
@@ -144,6 +147,9 @@
 <li>
 <a href="/en/campaigns/corruption-and-money-laundering/banks-and-dirty-money/"><h4>Banks and Dirty Money&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
+<li>
+<a href="/en/campaigns/corruption-and-money-laundering/undercover-new-york/"><h4>Undercover in New York&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+</li>
 </ul>
 </li>
 <li>
@@ -153,13 +159,19 @@
 </a>
 <ul>
 <li>
+<a href="/en/campaigns/oil-gas-and-mining/turn-towards-transparency/"><h4>Revenue disclosure laws – Cardin-Lugar and the global transparency standard&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+</li>
+<li>
 <a href="/en/campaigns/oil-gas-and-mining/shell-and-enis-misadventures-nigeria/"><h4>Shell and Eni's Misadventures in Nigeria &nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 <li>
 <a href="/en/campaigns/oil-gas-and-mining/myanmarjade/"><h4>Jade: Myanmar's "Big State Secret"&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 <li>
-<a href="/en/campaigns/oil-gas-and-mining/how-lose-4-billion/"><h4>How to lose $4 billion&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+<a href="/en/campaigns/oil-gas-and-mining/shell-eni-company-executives-face-corruption-charges/"><h4>Shell, Eni &amp; company executives face corruption charges&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+</li>
+<li>
+<a href="/en/campaigns/oil-gas-and-mining/shell-knew/"><h4>Shell Knew&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 </ul>
 </li>
@@ -170,13 +182,13 @@
 </a>
 <ul>
 <li>
-<a href="/en/campaigns/environmental-activists/perus-deadly-environment/"><h4>Peru's Deadly Environment&nbsp;<i class="fa fa-angle-right"></i></h4></a>
-</li>
-<li>
 <a href="/en/campaigns/environmental-activists/how-many-more/"><h4>How Many More?&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 <li>
-<a href="/en/campaigns/environmental-activists/climate-change-conference-paris/"><h4>Countdown to the Climate Summit&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+<a href="/en/campaigns/environmental-activists/dangerous-ground/"><h4>On Dangerous Ground&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+</li>
+<li>
+<a href="/en/campaigns/environmental-activists/honduras-deadliest-country-world-environmental-activism/"><h4>Honduras: the deadliest country in the world for environmental activism&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 </ul>
 </li>
@@ -195,6 +207,9 @@
 <li>
 <a href="/en/campaigns/forests/bloodtimber/"><h4>Blood Timber&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
+<li>
+<a href="/en/campaigns/forests/paul-pavols-story/"><h4>Paul Pavol's story&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+</li>
 </ul>
 </li>
 <li>
@@ -207,10 +222,10 @@
 <a href="/en/campaigns/land-deals/rubberbarons/"><h4>Rubber Barons&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 <li>
-<a href="/en/campaigns/land-deals/guns-cronies-and-crops/"><h4>Guns, Cronies and Crops&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+<a href="/en/campaigns/land-deals/new-snake-oil/"><h4>The New Snake Oil?&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 <li>
-<a href="/en/campaigns/land-deals/new-snake-oil/"><h4>The New Snake Oil?&nbsp;<i class="fa fa-angle-right"></i></h4></a>
+<a href="/en/campaigns/land-deals/tainted-lands-corruption-large-scale-land-deals/"><h4>Tainted Lands: Corruption in Large-Scale Land Deals&nbsp;<i class="fa fa-angle-right"></i></h4></a>
 </li>
 </ul>
 </li>
@@ -345,15 +360,13 @@
 <div class="main-column-width content-primary">
 <div class="block-paragraph">
 <div class="aligned"><div class="rich-text"><p>Introduction</p><p>This is the privacy policy for http://globalwitness.org (<b>Site</b>).&nbsp;
-The Site is operated by Global Witness (<b>we</b>, <b>us</b> and <b>our</b>).&nbsp;
-For the purposes of the UK Data Protection Act 1998, we are the data
-controller.</p><p>We are committed to protecting your privacy online.&nbsp; We appreciate that you do not want the
+The Site is operated by Global Witness (<b>we</b>, <b>us</b> and <b>our</b>).&nbsp;Global Witness is registered with the Information Commissioner for the United Kingdom. Its processing and retention of personal information is governed by the Data Protection Act 1998. &nbsp;</p><p>We are committed to protecting your privacy online.&nbsp; We appreciate that you do not want the
 personal information you provide to us distributed indiscriminately and here we
 explain how we collect information, what we do with it and what controls you
 have.</p><p>By using the Site, you consent to the collection and use
 of information in accordance with this privacy policy.</p><p>We reserve the right to change this privacy policy from
 time to time by changing it on the Site. This privacy policy was last updated
-on 16 April 2015.</p><p><b>Information we may collect from you</b></p><p>If you visit the Site, we may collect and process the
+on 21 December 2016.</p><p>We may collect information about you by email, when you fill in forms on the website, by telephone or by post.</p><p>When you visit the Site, we may collect and process the
 following information about you:</p><p></p><ul><li>information (such as your name and email
 address) that you provide by completing forms on the Site, such as when you
 register for our newsletter;<br></li><li>if you make a donation, we may collect and
@@ -372,23 +385,17 @@ unique address which identifies your computer on the internet) which is
 automatically recognised by our web server.&nbsp;
 You cannot be identified from this information and it is only used to
 assist us in providing an effective service on the Site and to collect broad
-demographic information for aggregate use.</p><p><b>Cookies</b></p><p>Cookies are small pieces of information which may be issued to your
-computer when you visit a website and which store and sometimes track
-information about your use of the Site.</p><p>Our Site does not currently issue any cookies to users of the Site. If
-that changes in the future, this section of this privacy policy will be updated
-accordingly.<b></b></p><p><b>Uses made of your information</b></p><p>We will use the information you provide to:</p><p></p><ul><li>enable us to provide you with the services,
+demographic information for aggregate use.</p><p><b>Cookies</b></p><p>Please click here for information on our <a href="/en/privacy-policy/cookie-policy/">cookie policy</a>.</p><p><b>Uses made of your information</b></p><p>We will use the information you provide to:</p><p></p><ul><li>enable us to provide you with the services,
 event invitations, newsletters and information about us and our fundraising
 campaigns offered through the Site and which you request;<br></li><li>audit the downloading of data from the Site;<br></li><li>improve the layout and/or content of the pages
 of the Site and customise them for users;<br></li><li>identify visitors to the Site;<br></li><li>carry out research on our users' demographics;<br></li><li>send you information we think you may find
 useful or which you have requested from us, including information about our
 products and services provided you have indicated that you do not object to
-being contacted for these purposes.&nbsp;<br></li></ul><p></p><p></p><p></p><p></p><p></p><p></p><p>You can tell us not to contact you with information regarding
+being contacted for these purposes;&nbsp;<br></li><li>We may ask what you are interested in about our work, in order to keep you up to date;<br></li><li>We may use your name and address to contact you by telephone;<br></li><li>We may use other publicly available information to ensure that we hold relevant information about you.<br></li></ul><p></p><p></p><p></p><p></p><p></p><p></p><p>You can tell us not to contact you with information regarding
 our services either at the point such information is collected on the Site (by
 checking or un-checking (as directed) the relevant box) or, where you do not
 wish us to continue to use your information in this way, by following the
-unsubscribe instructions on any communications sent to you.&nbsp; You can also exercise the right at any time
-by contacting us using the Contacting us details at the end of this privacy
-policy.</p><p><b>Information sharing</b></p><p>We may disclose aggregate statistics about visitors to the
+unsubscribe instructions on any communications sent to you.&nbsp;You can also ask us to amend or delete the information we hold about you. Our contact details are set out at the end of this policy. &nbsp;</p><p>You can find out more about your rights under Data Protection Act 1998 <a href="https://ico.org.uk/">here</a>.<br></p><p><b>Information sharing</b></p><p>We may disclose aggregate statistics about visitors to the
 Site in order to describe our services to prospective partners and other
 reputable third parties and for other lawful purposes, but these statistics
 will include no personally identifiable information.</p><p>We may disclose your personal information to any of our
@@ -431,7 +438,7 @@ risk.</p><p>It is advisable to close your browser when you have
 finished your user session to help ensure others do not access your personal
 information if you use a shared computer or a computer in a public place.</p><p><b>Storage of your information</b></p><p>Information that you submit via the Site will only be stored
 for as long as we legitimately need it or as required by the law.&nbsp; This information is sent to and stored on
-secure servers located in the United Kingdom.&nbsp;
+secure servers.&nbsp;
 This is necessary in order to process the information.&nbsp; Information submitted by you may be transferred
 by us to our other offices and/or to the third parties mentioned in the
 circumstances described above (see Information sharing), which may be situated
@@ -450,9 +457,9 @@ information for direct marketing purposes.</p><p><b>Contacting
 us</b></p><p>Please
 submit any questions, concerns or comments you have about this privacy policy
 or any requests concerning your personal data by email to mail@globalwitness.org or write to us at:</p><p>Global
-Witness, Lloyds Chamber, 1 Portsoken Street, London E1 8BT.</p><p></p><p></p><p>
-<!--[if !supportAnnotations]--></p>
-<!--[endif]--><p></p>
+Witness, Lloyds Chambers, 1 Portsoken Street, London E1 8BT.</p><p></p><p></p><p>
+</p>
+<p></p>
 <p></p></div></div>
 </div>
 </div>
@@ -503,7 +510,7 @@ Witness, Lloyds Chamber, 1 Portsoken Street, London E1 8BT.</p><p></p><p></p><p>
 </div>
 <div class="col newsletter">
 <h4>Get our newsletter</h4>
-<form class="" action="/en/sign-our-newsletter/" method="get">
+<form class="" action="/en/receive-email-updates/" method="get">
 <input class="" type="text" name="email" placeholder="Enter your email address" required="">
 <button class="button-yellow" type="submit">Sign up</button>
 </form>
@@ -518,13 +525,13 @@ Witness, Lloyds Chamber, 1 Portsoken Street, London E1 8BT.</p><p></p><p></p><p>
 <li><a href="/en/privacy-policy/">Privacy</a></li>
 <li><a href="/en/terms-use/">Terms of use</a></li>
 </ul>
-<p>© Global Witness 2016 (Global Witness is not responsible for the content of external sites)</p>
+<p>© Global Witness 2017 (Global Witness is not responsible for the content of external sites)</p>
 </div>
 </div>
 </footer>
 </div>
 <script src="//platform.twitter.com/widgets.js" async=""></script>
-<script type="text/javascript" src="/static/CACHE/js/a8c4e92a2560.js"></script>
+<script type="text/javascript" src="/static/CACHE/js/e2f1c8dbec39.js"></script>
 <script type="text/javascript" src="/static/CACHE/js/a3001842b09b.js"></script>
 <script>
             window.page_full_url = 'https://www.globalwitness.org/en/privacy-policy/';
